...
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:text="Log Out"
        android:textColor="#111111"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="#89F336"
        android:stateListAnimator="@null"
        android:layout_marginBottom="40dp"
...
