...
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tvSignUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textColor="#89F336"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
